tests/src/frontend/typechecking/invalid/multiline_errors.sk
fun a(b: Int): Int {
  b
}
fun main(): void {
  print_raw(_z: Bool = a(1));
}
